// Copyright 2020 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto2";

package protobuf.contrib.j2cl.protos;

import "javatests/com/google/protobuf/contrib/j2cl/protos/proto3_enums.proto";

option java_package = "com.google.protobuf.contrib.j2cl.protos";

// REMOVED_BY_GENRULE option java_multiple_files = true;

message Proto2TestProto {
  optional Proto3EnumTestProto.Proto3TestEnum optional_proto3_enum = 1;
  repeated Proto3EnumTestProto.Proto3TestEnum repeated_proto3_enum = 2;
}
